tests/ui/coercion/leak_check_single_to_fnptr.livecode.stderr
error[E0308]: mismatched types
  --> $DIR/leak_check_single_to_fnptr.rs:25:39
   |
LL |     let _target: for<'a> fn(&'a ()) = a_fndef;
   |                  ------------------   ^^^^^^^ one type is more general than the other
   |                  |
   |                  expected due to this
   |
   = note: expected fn pointer `for<'a> fn(&'a ())`
                 found fn item `fn(&'static ()) {static_fndef}`

error[E0308]: mismatched types
  --> $DIR/leak_check_single_to_fnptr.rs:28:39
   |
LL |     let _target: for<'a> fn(&'a ()) = a_fnptr;
   |                  ------------------   ^^^^^^^ one type is more general than the other
   |                  |
   |                  expected due to this
   |
   = note: expected fn pointer `for<'a> fn(&'a ())`
              found fn pointer `fn(&())`

error[E0308]: mismatched types
  --> $DIR/leak_check_single_to_fnptr.rs:39:39
   |
LL |     let _target: for<'a> fn(&'a ()) = a_closure;
   |                                       ^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a ())`
              found fn pointer `fn(&())`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
